--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
             <img src="./assets/image/logo vair.png" alt="logo vair" id="logo-vair">
             <nav class="navigasi">
                 <ul>
-                    <a href="">
+                    <a href="#">
                         <li>Home</li>
                     </a>
-                    <a href="">
+                    <a href="#">
                         <li>Product</li>
                     </a>
-                    <a href="">
+                    <a href="#">
                         <li>About Us</li>
                     </a>
-                    <a href="">
+                    <a href="#">
                         <li>Dealer</li>
                     </a>
-                    <a href="">
+                    <a href="#">
                         <li>Contacs</li>
                     </a>
                 </ul>
