--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VAIR OFFICIAL</title>
     <link rel="stylesheet" href="./assets/css/style1.css">
+    
 </head>
 <body>
     <header>
@@ -12,7 +13,9 @@
             <img src="./assets/image/jumbotron.gif" alt="">
         </div>
         <div class="header-content">
-            <img src="./assets/image/logo vair.png" alt="logo vair" id="logo-vair">
+            <div class="brand-logo">
+                <img src="./assets/image/logoooo.png" alt="logo vair" id="logo-vair">
+            </div>
             <nav class="navigasi">
                 <ul>
                     <a href="#">
