--- a/product.html
+++ b/product.html
@@ -75,6 +75,7 @@
                             <h3>MX12</h3>
                             <p>Harga mulai</p>
                             <h3>Rp 35.999.999,00</h3>
+                            <p id="detail">Detail<img src="./assets/image/icon-panah.png" alt="vef"></p>
                         </div>
                     </section>
                 </a>
@@ -87,6 +88,7 @@
                             <h3>VRs</h3>
                             <p>Harga mulai</p>
                             <h3>Rp 38.999.999,00</h3>
+                            <p id="detail">Detail<img src="./assets/image/icon-panah.png" alt="vef"></p>
                         </div>
                     </section>
                 </a>
@@ -99,6 +101,7 @@
                             <h3>KzX</h3>
                             <p>Harga mulai</p>
                             <h3>Rp 32.999.999,00</h3>
+                            <p id="detail">Detail<img src="./assets/image/icon-panah.png" alt="vef"></p>
                         </div>
                     </section>
                 </a>
@@ -111,6 +114,7 @@
                             <h3>Qr</h3>
                             <p>Harga mulai</p>
                             <h3>Rp 36.799.999,00</h3>
+                            <p id="detail">Detail<img src="./assets/image/icon-panah.png" alt="vef"></p>
                         </div>
                     </section>
                 </a>
@@ -123,6 +127,7 @@
                             <h3>TZk</h3>
                             <p>Harga mulai</p>
                             <h3>Rp 32.299.999,00</h3>
+                            <p id="detail">Detail<img src="./assets/image/icon-panah.png" alt="vef"></p>
                         </div>
                     </section>
                 </a>
@@ -135,6 +140,7 @@
                             <h3>TZk 4000</h3>
                             <p>Harga mulai</p>
                             <h3>Rp 33.599.999,00</h3>
+                            <p id="detail">Detail<img src="./assets/image/icon-panah.png" alt="vef"></p>
                         </div>
                     </section>
                 </a>
