--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                     <a href="#">
                         <li>Home</li>
                     </a>
-                    <a href="#">
+                    <a href="./product.html">
                         <li>Product</li>
                     </a>
-                    <a href="#">
+                    <a href="./aboutus.html">
                         <li>About Us</li>
                     </a>
                     <a href="#">
