ngubah warna, add animasi di page product

--- a/product.html
+++ b/product.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style-product.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
 </head>
 <body>
     <header>
@@ -32,7 +38,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="nav-product">
+        <div class="nav-product animate__animated animate__fadeInDown">
             <nav>
                 <ul>
                     <li>
@@ -67,7 +73,7 @@
         <div class="content">
             <div class="product-wrap">
                 <a href="">
-                    <section class="card">
+                    <section class="card animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
                             <img src="./assets/image/matic/1.png" alt="matic1">
                         </div>
@@ -80,7 +86,7 @@
                     </section>
                 </a>
                 <a href="">
-                    <section class="card">
+                    <section class="card animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
                             <img src="./assets/image/matic/2.png" alt="matic1">
                         </div>
@@ -93,7 +99,7 @@
                     </section>
                 </a>
                 <a href="">
-                    <section class="card">
+                    <section class="card  animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
                             <img src="./assets/image/matic/3.png" alt="matic1">
                         </div>
@@ -106,7 +112,7 @@
                     </section>
                 </a>
                 <a href="">
-                    <section class="card">
+                    <section class="card animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
                             <img src="./assets/image/matic/4.png" alt="matic1">
                         </div>
@@ -119,7 +125,7 @@
                     </section>
                 </a>
                 <a href="">
-                    <section class="card">
+                    <section class="card  animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
                             <img src="./assets/image/matic/7.png" alt="matic1">
                         </div>
@@ -132,7 +138,7 @@
                     </section>
                 </a>
                 <a href="">
-                    <section class="card">
+                    <section class="card  animate__animated animate__fadeInRight animate__delay-1s">
                         <div class="img-wrap">
                             <img src="./assets/image/matic/8.png" alt="matic1">
                         </div>
