--- a/aboutus.html
+++ b/aboutus.html
@@ -50,6 +50,35 @@
 
     <!-- content  -->
     <main>
+        <div class="container">
+            <div class="introduce-vair">
+
+            </div>
+
+            <div class="visi-misi">
+                <div class="visi">
+                    <h2>Vision of VAIR</h2>
+                    <p>To be the foremost trailblazer in the motorcycle automotive industry in Indonesia, VAIR is committed to leading with innovation that guides towards a unique riding experience, empowers mobility, and resonates with motorcycle enthusiasts nationwide.</p>
+                </div>
+                <div class="misi">
+                    <h2>Mission of VAIR</h2>
+                    <ol>
+                        <li>Limitless Innovation: Pioneer groundbreaking technology to create motorcycles that redefine the riding experience.</li>
+                        <li>Forefront Quality: Prioritize top-tier quality for reliable and enduring motorcycles that instill pride in every owner.</li>
+                        <li>Green Practices: Champion eco-friendly production, reducing environmental impact for a sustainable future.</li>
+                        <li>Community Unity: Cultivate a strong riding community, fostering connections and shared passion among enthusiasts.</li>
+                    </ol>
+                </div>
+            </div>
+            <div class="komitmen">
+                <h2>Commitment to Sustainability</h2>
+                <p>In alignment with the global shift towards sustainability, VAIR is committed to reducing its environmental footprint. The brand invests in research and development to introduce eco-friendly technologies and materials in its manufacturing processes. VAIR motorcycles are designed to meet stringent emission standards while maintaining optimal performance. By prioritizing sustainability, VAIR not only contributes to the well-being of the planet but also resonates with environmentally conscious consumers who seek responsible choices in their automotive investments</p>
+            </div>
+            <div class="community">
+                <h2>Community Engagement and Support</h2>
+                <p>Beyond its products, VAIR actively engages with the motorcycle community in Indonesia. The brand organizes events, rallies, and rider meet-ups to foster a sense of camaraderie among enthusiasts. VAIR also provides comprehensive after-sales support, including maintenance services and readily available spare parts. This commitment to customer satisfaction ensures that VAIR not only sells motorcycles but also establishes lasting relationships with its customers, creating a loyal community of riders who proudly identify with the brand. VAIR's presence extends beyond the showroom, creating a holistic experience that goes hand in hand with the thrill of riding.</p>
+            </div>
+        </div>
 
 
     </main>
