--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
     <main>
         <div class="container">
             <div class="profile-introduction">
-                <div class="img-introduction" id="intro">
+                <div class="img-introduction slide-in-on-scroll" id="intro">
                     <img src="./assets/image/sloganvair.png" alt="vair-oto">
                 </div>
-                <div class="introduction">
+                <div class="introduction slide-in-on-scroll">
                     <p>VAIR is a prominent player in the Indonesian automotive industry, specifically focusing on the motorcycle sector. Established with a commitment to innovation, quality, and a passion for two-wheeled mobility, VAIR has carved a niche for itself in the dynamic and competitive Indonesian market. The brand's name, derived from the combination of "Vehicle" and "Air," reflects its dedication to providing cutting-edge and exhilarating riding experiences.
                     </p>
                     <p>VAIR boasts an impressive product lineup that caters to the diverse needs and preferences of motorcycle enthusiasts in Indonesia...
@@ -72,13 +72,17 @@
                     <a href="">More</a>
                 </div>
             </div>
+
+            <div class="promo">
+                
+            </div>
             <div class="product">
                 <div class="product-title">
                     <h1><span>OUR</span> PRODUCT</h1>
                 </div>
                 <div class="product-wrap">
                     <a href="">
-                        <section class="card animate__animated animate__fadeInRight animate__delay-1s">
+                        <section class="card slide-in-on-scroll">
                             <div class="img-wrap">
                                 <img src="./assets/image/matic/1.png" alt="matic1">
                             </div>
@@ -91,7 +95,7 @@
                         </section>
                     </a>
                     <a href="">
-                        <section class="card animate__animated animate__fadeInRight animate__delay-1s">
+                        <section class="card slide-in-on-scroll">
                             <div class="img-wrap">
                                 <img src="./assets/image/matic/2.png" alt="matic1">
                             </div>
@@ -104,7 +108,7 @@
                         </section>
                     </a>
                     <a href="">
-                        <section class="card  animate__animated animate__fadeInRight animate__delay-1s">
+                        <section class="card  slide-in-on-scroll">
                             <div class="img-wrap">
                                 <img src="./assets/image/matic/3.png" alt="matic1">
                             </div>
@@ -117,7 +121,7 @@
                         </section>
                     </a>
                     <a href="">
-                        <section class="card animate__animated animate__fadeInRight animate__delay-1s">
+                        <section class="card slide-in-on-scroll">
                             <div class="img-wrap">
                                 <img src="./assets/image/matic/4.png" alt="matic1">
                             </div>
@@ -131,52 +135,57 @@
                     </a>
                 </div>
                 <div class="button-product">
-                    <a href="" >Show More Products</a>
+                    <a href="/product.html" >Show More Products</a>
                 </div>
             </div>
 
+            
             <div class="testimoni">
                 <div class="testi-title">
-                    <h1>Customer Reviews: Hear It From Them</h1>
+                    <h1><span>Customer Reviews:</span> Hear It From Them</h1>
                 </div>
-                <div class="testi-top">
-                    <div class="card-testi">
+                <div class="testi-row">
+                    <div class="card-testi slide-in-on-scroll">
                         <div class="testi-profile">
-                            <img src="" alt="">
+                            <img src="/assets/image/Person1.png" alt="">
                             <div class="testi-profile-desc">
                                 <h2>Marc Marquez</h2>
-                                <p>"As a loyal rider of the VAIR motorcycle brand, I am extremely satisfied with the performance and quality of this bike. VAIR not only offers a stylish design but also provides an outstanding riding experience. Its powerful engine delivers responsive acceleration, making my journeys more enjoyable. Additionally, the advanced and innovative features embedded in the VAIR motorcycle, such as integrated security systems and connectivity features, make it a highly suitable choice. I confidently recommend the VAIR brand to all motorcycle enthusiasts seeking the perfect blend of style, performance, and technology."</p>
+                                <p>Professional MotoGP racer</p>
                             </div>
                         </div>
+                        <p>"As a loyal rider of the VAIR motorcycle brand, I am extremely satisfied with the performance and quality of this bike. VAIR not only offers a stylish design but also provides an outstanding riding experience. Its powerful engine delivers responsive acceleration, making my journeys more enjoyable. Additionally, the advanced and innovative features embedded in the VAIR motorcycle, such as integrated security systems and connectivity features, make it a highly suitable choice. I confidently recommend the VAIR brand to all motorcycle enthusiasts seeking the perfect blend of style, performance, and technology."</p>
                     </div>
-                    <div class="card-testi">
+                    <div class="card-testi slide-in-on-scroll">
                         <div class="testi-profile">
-                            <img src="" alt="">
+                            <img src="/assets/image/Person2.png" alt="">
                             <div class="testi-profile-desc">
                                 <h2>Eddy Moelyady</h2>
-                                <p>"My experience as a rider of the VAIR motorcycle brand has been truly exceptional. The reliability and fuel efficiency of its engine make long journeys more efficient and comfortable. Not only that, but its ergonomic design provides extra comfort during extended rides. I deeply appreciate the latest technology embedded in the VAIR motorcycle, such as advanced braking systems and security features that ensure a safe driving experience. With all these advantages, I take pride in being part of the VAIR motorcycle rider community and highly recommend it to anyone seeking an extraordinary riding experience."</p>
+                                <p>Motorcycle Lovers</p>
                             </div>
                         </div>
+                        <p>"My experience as a rider of the VAIR motorcycle brand has been truly exceptional. The reliability and fuel efficiency of its engine make long journeys more efficient and comfortable. Not only that, but its ergonomic design provides extra comfort during extended rides. I deeply appreciate the latest technology embedded in the VAIR motorcycle, such as advanced braking systems and security features that ensure a safe driving experience. With all these advantages, I take pride in being part of the VAIR motorcycle rider community and highly recommend it to anyone seeking an extraordinary riding experience."</p>
                     </div>
                 </div>
-                <div class="testi-bottom">
-                    <div class="card-testi">
+                <div class="testi-row">
+                    <div class="card-testi slide-in-on-scroll">
                         <div class="testi-profile">
-                            <img src="" alt="">
+                            <img src="/assets/image/Person3.png" alt="">
                             <div class="testi-profile-desc">
                                 <h2>Ranoe Karno</h2>
-                                <p>"As a devoted fan of the VAIR motorcycle brand, I am continually impressed by its outstanding performance and captivating design. This motorcycle not only provides a dynamic and stylish riding experience but also excels in terms of durability and reliability. The comfort and security systems in the VAIR motorcycle make every journey more enjoyable and worry-free. I take pride in being part of the VAIR rider community, and I am confident that anyone who tries this motorcycle will experience the same satisfaction. VAIR is the perfect choice for those seeking the perfect combination of performance excellence and striking design.</p>    
+                                <p>Automotive Observer</p>
                             </div>
                         </div>
+                        <p>"As a devoted fan of the VAIR motorcycle brand, I am continually impressed by its outstanding performance and captivating design. This motorcycle not only provides a dynamic and stylish riding experience but also excels in terms of durability and reliability. The comfort and security systems in the VAIR motorcycle make every journey more enjoyable and worry-free. I take pride in being part of the VAIR rider community, and I am confident that anyone who tries this motorcycle will experience the same satisfaction. VAIR is the perfect choice for those seeking the perfect combination of performance excellence and striking design.</p>    
                     </div>
-                    <div class="card-testi">
+                    <div class="card-testi slide-in-on-scroll">
                         <div class="testi-profile">
-                            <img src="" alt="">
+                            <img src="/assets/image/Person4.png" alt="">
                             <div class="testi-profile-desc">
                                 <h2>Onana Lawack</h2>
-                                <p>"As an experienced motorcycle rider\, I couldn't be more satisfied with the VAIR brand. Its reliable and efficient performance makes every journey an extraordinary experience. The futuristic and ergonomic design not only captures attention but also ensures optimal comfort during rides. I deeply appreciate the technological innovations embedded in this motorcycle, such as integrated navigation systems and advanced security features. From style and performance to safety, the VAIR motorcycle has met and even exceeded my expectations. I am delighted to recommend the VAIR motorcycle to anyone who values a combination of quality and style in one package."</p>    
+                                <p>Common People</p>
                             </div>
                         </div>
+                        <p>"As an experienced motorcycle rider, I couldn't be more satisfied with the VAIR brand. Its reliable and efficient performance makes every journey an extraordinary experience. The futuristic and ergonomic design not only captures attention but also ensures optimal comfort during rides. I deeply appreciate the technological innovations embedded in this motorcycle, such as integrated navigation systems and advanced security features. From style and performance to safety, the VAIR motorcycle has met and even exceeded my expectations. I am delighted to recommend the VAIR motorcycle to anyone who values a combination of quality and style in one package."</p>    
                     </div>
                 </div>
             </div>
@@ -196,7 +205,7 @@
     <!-- footer  -->
     <footer>
         <div class="footer">
-            <div class="left-footer">
+            <div class="left-footer slide-in-on-scroll">
                 <div class="left-footer-title">
                     <img src="./assets/image/logogogo-removebg-preview.png" alt="vair">
                     <p>VAIR INDONESIA OFFICIAL</p>
@@ -213,7 +222,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="right-footer">
+            <div class="right-footer slide-in-on-scroll">
                 <div class="contact-us" id="contacts">
                     <h2>Contact Us</h2>
                     <div class="contact">
