--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
     <div class="channel">
         <p><span>FIND </span>OUR CHANNEL</p>
         <div class="channel-icon">
-            <a href=""><i class="fa-brands fa-instagram fa-xl"></i></a>
-            <a href=""><i class="fa-brands fa-tiktok fa-xl"></i></a>
-            <a href=""><i class="fa-brands fa-youtube fa-xl"></i></a>
-            <a href=""><i class="fa-brands fa-facebook fa-xl"></i></a>
+            <a href="https://www.instagram.com/ngabers.indonesia_?igsh=MWJ4azM2MHF2N2l6MQ==" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a>
+            <a href="https://www.tiktok.com/@automotive_enthusiast94?_t=8iMMSnwEZtK&_r=1" target="_blank"><i class="fa-brands fa-tiktok fa-xl"></i></a>
+            <a href="https://youtube.com/@bibotoysidn?si=NL_1pbYjbIvWgz11" target="_blank"><i class="fa-brands fa-youtube fa-xl"></i></a>
+            <a href="https://www.facebook.com/groups/437822326821655/?ref=share&mibextid=I6gGtw" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a>
         </div>
     </div>
     <!-- footer  -->
@@ -214,12 +214,15 @@
                     <ul>
                         <a href=""><li>Corporate</li></a>
                         <a href=""><li>Product</li></a>
-                        <a href=""><li>Press Release</li></a>
                     </ul>
                     <ul>
                         <a href=""><li>Dealer</li></a>
-                        <a href=""><li>Promo</li></a>
+                        <a href=""><li>Press Release</li></a>
                     </ul>
+                </div>
+                <div class="instansi">
+                    <img src="/assets/image/sertifikat-SNI.jpg" alt="">
+                    <img src="/assets/image/dishub.jpeg" alt="">
                 </div>
             </div>
             <div class="right-footer slide-in-on-scroll">
