tambah dealer+responsif

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <img src="./assets/image/logoooo.png" alt="logo vair" id="logo-vair">
             </div>
             <nav class="navigasi" id="navigasi">
+                <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
                 <ul>
                     <a href="#">
                         <li>Home</li>
@@ -45,7 +46,7 @@
                     <a href="./aboutus.html">
                         <li>About Us</li>
                     </a>
-                    <a href="#">
+                    <a href="/dealer.html">
                         <li>Dealer</li>
                     </a>
                     <a href="#contacts">
@@ -69,7 +70,7 @@
                     <p>VAIR boasts an impressive product lineup that caters to the diverse needs and preferences of motorcycle enthusiasts in Indonesia...
                     </p>
 
-                    <a href="">More</a>
+                    <a href="/aboutus.html">More</a>
                 </div>
             </div>
 
@@ -81,7 +82,7 @@
                     <h1><span>OUR</span> PRODUCT</h1>
                 </div>
                 <div class="product-wrap">
-                    <a href="">
+                    <a href="/matic.html">
                         <section class="card slide-in-on-scroll">
                             <div class="img-wrap">
                                 <img src="./assets/image/matic/1.png" alt="matic1">
