--- a/aboutus.html
+++ b/aboutus.html
@@ -28,11 +28,12 @@
                 <img src="./assets/image/logoooo.png" alt="logo vair" id="logo-vair">
             </div>
             <nav class="navigasi" id="navigasi">
+                <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
                 <ul>
-                    <a href="#">
+                    <a href="/index.html">
                         <li>Home</li>
                     </a>
-                    <a href="#">
+                    <a href="/product.html">
                         <li>Product</li>
                     </a>
                     <a href="#">
@@ -41,7 +42,7 @@
                     <a href="#">
                         <li>Dealer</li>
                     </a>
-                    <a href="#">
+                    <a href="#contacts">
                         <li>Contacs</li>
                     </a>
                 </ul>
@@ -144,8 +145,8 @@
                 </div>
                 <div class="left-footer-content">
                     <ul>
-                        <a href=""><li>Corporate</li></a>
-                        <a href=""><li>Product</li></a>
+                        <a href="/aboutus.html"><li>Corporate</li></a>
+                        <a href="/product.html"><li>Product</li></a>
                     </ul>
                     <ul>
                         <a href=""><li>Dealer</li></a>
