--- a/product.html
+++ b/product.html
@@ -254,7 +254,7 @@
                         <ul>
                             <a href=""><li>Corporate</li></a>
                             <a href=""><li>Product</li></a>
-                            <a href=""><li>Press Release</li></a>
+                            <a href="news.html"><li>Press Release</li></a>
                         </ul>
                         <ul>
                             <a href=""><li>Dealer</li></a>
